# ktrace

./: .gitignore  AGENTS.md  CMakeLists.txt  CONFIG-SCHEMA.md  ENGINE_EXTRAS_SPLIT.md  GAME-ENGINE-SPLIT-PLAN.md  HOW-TO-ADD-SUBSYSTEM.md  KARMA-EXTRAS.md  README.init  README.md  REFACTOR-TRACKER.md  TODO-KARMA-REPO-ALIGNMENT.md  TODO-MAKE-KARMA-STANDALONE.md  TODO-overseer-playbook.md  TODO.md  abuild.py  architecture.md  bzbuild.py  kbuild.json  kbuild.py
KARMA-REPO-ORIG/: CMakeLists.txt  README.md
KARMA-REPO-ORIG/docs/: integration_overview.md  rmlui_diligent_notes.md
KARMA-REPO-ORIG/examples/: GameInit.cpp  GameLoop.cpp  main.cpp  network_demo.cpp  rmlui_ui_demo.cpp
KARMA-REPO-ORIG/examples/assets/rmlui_demo/: demo.rml
KARMA-REPO-ORIG/include/karma/app/: ui_draw_data.h
KARMA-REPO-ORIG/include/karma/components/: audio_source.h  collider.h  environment.h  light.h  rigidbody.h  transform.h
KARMA-REPO-ORIG/include/karma/ecs/: world.h
KARMA-REPO-ORIG/include/karma/geometry/: mesh_loader.h
KARMA-REPO-ORIG/include/karma/math/: quat.h
KARMA-REPO-ORIG/include/karma/network/: transport_factory.h
KARMA-REPO-ORIG/include/karma/platform/: events.h  window.h
KARMA-REPO-ORIG/include/karma/renderer/: backend.hpp  device.h  render_target.h  resource_registry.h  skybox.h  texture.h  types.h
KARMA-REPO-ORIG/src/network/: enet_transport.cpp
KARMA-REPO-ORIG/src/physics/: physics_world.cpp  rigid_body.cpp
KARMA-REPO-ORIG/src/platform/backends/: window_glfw.cpp
KARMA-REPO-ORIG/src/renderer/: backend_factory.cpp  render_system.cpp
cmake/tests/: CMakeLists.txt  ktrace_changed_thread_safety_test.cpp  ktrace_channel_semantics_test.cpp  ktrace_format_api_test.cpp  ktrace_log_api_test.cpp
demo/bootstrap/: CMakeLists.txt  README.md
demo/bootstrap/cmake/tests/: CMakeLists.txt
demo/bootstrap/src/: main.cpp
demo/exe/omega/: CMakeLists.txt  README.md
demo/exe/omega/src/: main.cpp
demo/executable/: CMakeLists.txt  README.md  abuild.py
demo/executable/cmake/tests/: CMakeLists.txt  trace_cli_cases.sh
demo/executable/src/: main.cpp
demo/executable/tests/: trace_cli_cases.sh
demo/initialize/: CMakeLists.txt  README.md
demo/initialize/src/: main.cpp
demo/libraries/alpha/: CMakeLists.txt  README.md  abuild.py
demo/libraries/beta/: CMakeLists.txt  README.md  abuild.py
demo/libraries/delta/: CMakeLists.txt  README.md  abuild.py
demo/libraries/gamma/: CMakeLists.txt  README.md
demo/sdk/alpha/: CMakeLists.txt  README.md
demo/sdk/beta/: CMakeLists.txt  README.md
examples/karma_find_package/: CMakeLists.txt  main.cpp
src/engine/: AGENTS.md  CMakeLists.txt  README.md  architecture.md
src/engine/app/: AGENTS.md  architecture.md  backend_resolution.cpp  backend_resolution_client.cpp  bootstrap_scaffold.cpp  cli_client_backend_options.cpp  cli_parse_scaffold.cpp  engine_app.cpp  engine_app.hpp  engine_config.hpp  engine_server_app.cpp  game_interface.hpp  ui_context.cpp
src/engine/audio/: audio.hpp  audio_system.cpp  backend_factory.cpp
src/engine/common/: AGENTS.md  config_helpers.cpp  config_helpers.hpp  config_store.cpp  config_validation.cpp  config_validation.hpp  data_dir_override.cpp  data_dir_override.hpp  data_path_resolver.cpp  data_path_resolver.hpp  logging.cpp  simulation_clock.cpp  world_archive.cpp  world_content.cpp
src/engine/ecs/: AGENTS.md
src/engine/geometry/: mesh_loader.cpp  mesh_loader.hpp
src/engine/graphics/: backend.hpp  device.cpp  device.hpp
src/engine/input/: input.cpp  input.hpp  input_system.cpp
src/engine/network/: client_reconnect_policy.cpp  client_transport.cpp  server_transport.cpp  transport_config_mapping.cpp  transport_pump_normalizer.hpp
src/engine/physics/: backend.hpp  backend_factory.cpp  ecs_sync_system.cpp  ecs_sync_system.hpp  physics_system.cpp  physics_world.cpp  physics_world.hpp  world.cpp
src/engine/platform/: window_factory.cpp
src/engine/renderer/: AGENTS.md  README.md  architecture.md  backend_factory.cpp  device.cpp  render_system.cpp  scene_renderer.hpp
src/engine/scene/: roaming_camera.cpp  scene_bootstrap.cpp
src/engine/ui/: backend.hpp  backend_factory.cpp  system.cpp  ui_backend.cpp  ui_backend.hpp  ui_backend_imgui.cpp  ui_rmlui_adapter_rmlui.cpp  ui_rmlui_adapter_stub.cpp  ui_system.cpp
src/engine/window/: backend_factory.cpp
src/game/: AGENTS.md  CMakeLists.txt  architecture.md  game.cpp  game.hpp  game.hpp.bak
src/game/client/: AGENTS.md  architecture.md  bootstrap.cpp  bootstrap.hpp  cli_options.cpp  cli_options.hpp  client.cpp  client.hpp  client_cli_options.cpp  client_cli_options.hpp  community_server_list.cpp  community_server_list.hpp  game.cpp  main.cpp  player.cpp  player.hpp  roaming_camera.cpp  roaming_camera.hpp  runtime.cpp  shot.cpp  shot.hpp  world_session.cpp  world_session.hpp
src/game/engine/: AGENTS.md  client_engine.cpp  client_engine.hpp  server_engine.cpp
src/game/net/: client_network.hpp  messages.hpp  proto_codec.cpp  protocol.hpp  protocol_codec.cpp  protocol_codec.hpp  server_network.hpp
src/game/protos/: messages.proto
src/game/renderer/: AGENTS.md  README.md  architecture.md  radar_components.hpp  radar_renderer.cpp  radar_renderer.hpp  renderer.cpp  renderer.hpp
src/game/server/: bootstrap.cpp  cli_options.cpp  cli_options.hpp  community_heartbeat.cpp  community_heartbeat.hpp  game.cpp  game.hpp  heartbeat_client.cpp  heartbeat_client.hpp  main.cpp  runtime.cpp  server_cli_options.cpp  server_cli_options.hpp  server_game.cpp  server_game.hpp  world_session.cpp  world_session.hpp
src/game/tests/: client_world_package_safety_integration_test.cpp  community_heartbeat_integration_test.cpp  enet_disconnect_lifecycle_integration_test.cpp  enet_environment_probe_test.cpp  enet_loopback_integration_test.cpp  enet_multiclient_loopback_test.cpp  server_net_contract_test.cpp  transport_disconnect_lifecycle_integration_test.cpp  transport_environment_probe_test.cpp  transport_loopback_integration_test.cpp  transport_multiclient_loopback_test.cpp
src/game/ui/: AGENTS.md  architecture.md
src/karma-extras/: CMakeLists.txt  karma_extras.cpp
(+1048 files in other folders)
